# glsl2wgsl

./: .gitignore  Cargo.toml  LICENSE  README.md  foo.txt  index.html  main.js  parse_span_texts.txt  parsed_file.txt
examples/: add_span_to_str.rs  ex.rs  glsl_file_to_parse.glsl  parse_file.rs  replace_let.rs
src/: haskell_let_parser.hs  insert_new_arg_vars.rs  let2var.rs  lib.rs  nom_helpers.rs  parse_func_defines.rs  parse_tests.rs  parser.rs  parsers.rs  parsers_span.rs  replace_defines.rs  replace_defs.rs  replace_inouts.rs  replace_main.rs  replace_mod.rs  replace_texel_fetch.rs  replace_unis.rs  syntax.rs  visitor.rs  wgsl_convert_test.rs
src/parsers/: nom_helpers.rs
src/parsers_span/: nom_helpers.rs
src/transpiler/: ast.rs  glsl.rs  mod.rs  wgsl.rs
