[package]
name = "glsl2wgsl"
version = "0.0.1"
license = "BSD-3-Clause"
authors = ["Eliot Bolduc <eliot.bolduc@gmail.com>"]
description = "Translates GLSL code to WGSL."
keywords = ["GLSL", "WGSL", "parser", "transpiler", "translator"]
categories = ["parsing", "rendering"]
homepage = "https://eliotbo.github.io/"
repository = "https://eliotbo.github.io/"
readme = "README.md"

edition = "2018"

[features]
spirv = ["shaderc"]

[dependencies]
nom = { version = "6", default-features = false, features = ["std"] }
shaderc = { version = "0.6", optional = true }
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib"]

# [examples]
# name = "ex"
# path = "examples/ex.rs"